--- a/FAV HOBBIES/css.css
+++ b/FAV HOBBIES/css.css
@@ -1,12 +1,12 @@
 h1 {
     color: #050106;
-    background-color:cadetblue;
+    background-color:lightcoral;
     font-style: oblique;
     font-family: Constantia, "Lucida Bright", "DejaVu Serif", Georgia, "serif";
     text-align: center;
 }
 	.header{
- background-color:#17252A;
+ background-color: lightcoral;
     display: flex;
     justify-content: space-between;
     margin-Top:20px;
@@ -37,8 +37,9 @@ border:solid;
 .menu a{
     margin-left: 20px;
     border: solid;
-    border-color: rgb(219, 0, 135);
+    border-color: black;
     border-radius: 110px;
+	color: black
 }
 p{
     position:absolute;
@@ -75,5 +76,5 @@ justify-content: space-evenly;
 }
 
 body {
-	background-color: darkgrey
+	background-color: lavenderblush;
 }
